<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		colors
	 *	@date 		Wednesday 26th of July 2023 01:07:32 PM
	 *	@title 		user guide
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/colors" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_colors_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__colors_ek2"
					android:background="@drawable/_bg__colors_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="525dp"
					android:layout_height="525dp" />


				<RelativeLayout android:id="@+id/heading"
					android:layout_marginTop="20dp"
					android:layout_marginStart="1dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/colors_ek3"
						android:fontFamily="Inter"
						android:textSize="54sp"
						android:textColor="@color/colors_ek3_color"
						android:layout_marginLeft="109dp"
						android:layout_marginTop="45dp"
						android:layout_width="224dp"
						android:layout_height="103dp"
						android:text="@string/colors_ek3_string"
						 />

					<TextView android:id="@+id/_01"
						android:fontFamily="Inter"
						android:textSize="100sp"
						android:textColor="@color/_01_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="214dp"
						android:layout_height="191dp"
						android:text="@string/_01_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/color_section"
					android:layout_marginTop="372dp"
					android:layout_marginStart="37dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/accent"
						android:fontFamily="Inter"
						android:textSize="28sp"
						android:textColor="@color/accent_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="33dp"
						android:layout_width="127dp"
						android:layout_height="54dp"
						android:text="@string/accent_string"
						 />


					<RelativeLayout android:id="@+id/color_box"
						android:layout_marginTop="0dp"
						android:layout_marginStart="131dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_1"
							android:background="@drawable/rectangle_1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="100dp"
							android:layout_height="100dp" />

						<TextView android:id="@+id/__e0e0e0"
							android:fontFamily="Inter"
							android:textSize="20sp"
							android:textColor="@color/accent_color"
							android:layout_marginLeft="6dp"
							android:layout_marginTop="108dp"
							android:layout_width="111dp"
							android:layout_height="38dp"
							android:text="@string/__e0e0e0_string"
							 />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/color_box_ek1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="268dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_1_ek1"
							android:background="@drawable/rectangle_1_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="100dp"
							android:layout_height="100dp" />

						<TextView android:id="@+id/__232323"
							android:fontFamily="Inter"
							android:textSize="20sp"
							android:textColor="@color/accent_color"
							android:layout_marginLeft="6dp"
							android:layout_marginTop="108dp"
							android:layout_width="113dp"
							android:layout_height="38dp"
							android:text="@string/__232323_string"
							 />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/color_section_ek1"
					android:layout_marginTop="198dp"
					android:layout_marginStart="37dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/primary"
						android:fontFamily="Inter"
						android:textSize="28sp"
						android:textColor="@color/accent_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="33dp"
						android:layout_width="135dp"
						android:layout_height="54dp"
						android:text="@string/primary_string"
						 />


					<RelativeLayout android:id="@+id/color_box_ek2"
						android:layout_marginTop="0dp"
						android:layout_marginStart="131dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_1_ek2"
							android:background="@drawable/rectangle_1_ek2_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="100dp"
							android:layout_height="100dp" />

						<TextView android:id="@+id/__4e6bf9"
							android:fontFamily="Inter"
							android:textSize="20sp"
							android:textColor="@color/accent_color"
							android:layout_marginLeft="6dp"
							android:layout_marginTop="108dp"
							android:layout_width="113dp"
							android:layout_height="38dp"
							android:text="@string/__4e6bf9_string"
							 />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>